--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>📘️ The Code</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>📘️ The Code Magazine</h1>
       <nav>
         <a href="./blog.html">Blog</a>
@@ -26,7 +27,9 @@
           width="50"
           height="50"
         />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <img
           src="images/post-img.jpg"
           alt="HTML code on a computer screen"
@@ -89,8 +92,8 @@
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
     <aside>
-      <h3>Related posts</h3>
-      <ul>
+      <h4>Related posts</h4>
+      <ul class="related-posts">
         <li>
           <img
             src="images/related-1.jpg"
@@ -98,7 +101,9 @@
             width="75"
             height="75"
           /><a href="#">How to Learn Web Development</a>
-          <p><strong>By Jonas Schmedtmann</strong></p>
+          <p class="related-author">
+            <strong>By Jonas Schmedtmann</strong>
+          </p>
         </li>
         <li>
           <img
@@ -107,7 +112,9 @@
             width="75"
             height="75"
           /><a href="#">The Unkown Powers of CSS </a>
-          <p><strong>By Jim Dilon</strong></p>
+          <p class="related-author">
+            <strong>By Jim Dilon</strong>
+          </p>
         </li>
         <li>
           <img
@@ -116,10 +123,16 @@
             width="75"
             height="75"
           /><a href="#">Why JavaScript is Awesome</a>
-          <p><strong>By Matilda</strong></p>
+          <p class="related-author">
+            <strong>By Matilda</strong>
+          </p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copy; 2027 by the Code Magazine.</footer>
+    <footer>
+      <p id="copyright" class="copyright text">
+        Copyright &copy; 2027 by the Code Magazine.
+      </p>
+    </footer>
   </body>
 </html>
