--- a/starter/02-HTML-Fundamentals/shoes.html
+++ b/starter/02-HTML-Fundamentals/shoes.html
@@ -8,28 +8,43 @@
     <title>Shoes</title>
   </head>
   <body>
-    <header class="header">
-      <h1>Converse Chuck Taylor All Star Low Top</h1>
-    </header>
+    <div class="container">
+      <div class="sale">Sale</div>
+      <header class="header">
+        <h1>Converse Chuck Taylor All Star Low Top</h1>
+      </header>
 
-    <img
-      src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
-      alt="Converse Shoes"
-      width="250"
-    />
-    <p class="price"><strong>$65.00</strong></p>
-    <p class="shipping">Free Shipping</p>
-    <p>
-      Ready to dress up or down, these classics canvas Chucks are an everyday
-      wardrobe staple.
-    </p>
-    <p><a href="#" class="info">More Information &rarr;</a></p>
-    <h3></h3>
-    <ul>
-      <li>Lightweight, durable canvas sneaker</li>
-      <li>Lightly padded footbed for added comfort</li>
-      <li>Iconic Chuck Taylor ankle patch.</li>
-    </ul>
-    <button class="btn-cart">Add to cart</button>
+      <img
+        src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+        alt="Converse Shoes"
+        class="item-img"
+      />
+      <section>
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free Shipping</p>
+        <p class="description">
+          Ready to dress up or down, these classics canvas Chucks are an
+          everyday wardrobe staple.
+        </p>
+        <p><a href="#" class="info">More Information &rarr;</a></p>
+        <ul class="color-picker">
+          <li class="box color1"></li>
+          <li class="box color2"></li>
+          <li class="box color3"></li>
+          <li class="box color4"></li>
+          <li class="box color5"></li>
+          <li class="box color6"></li>
+        </ul>
+      </section>
+      <section>
+        <h3>Product Details</h3>
+        <ul>
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch.</li>
+        </ul>
+      </section>
+      <button class="btn-cart">Add to cart</button>
+    </div>
   </body>
 </html>
